# DataAcquisition

./: .env_template  .gitignore  .pre-commit-config.yaml  acquisition.py  pyproject.toml
.github/workflows/: dependencycheck.yml  main.yml
dataacquisition/: __init__.py  acquisition.py  osutesting.osu  test_dotenvfile.py
tests/: black_test.py  blackfail.py  test_dataacquisition.py
