[tool.poetry]
name = "DataAcquisition"
version = "0.1.0"
description = ""
authors = ["hefadog2","Spencer","Peter"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.3.4"
matplotlib = "^3.4.3"
spotipy = "^2.19.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
